[package]
authors = ["The glfw-rs developers."]
description = "GLFW3 bindings and idiomatic wrapper for Rust with Passthrough patches."
keywords = ["windowing", "opengl", "vulkan"]
license = "Apache-2.0"
name = "glfw-passthrough"
readme = "README.md"
repository = "https://github.com/coderedart/glfw-rs.git"
version = "0.51.1"
edition = "2021"
rust-version = "1.56"

[dependencies]
bitflags = "1.0.0"
raw-window-handle = "0.5.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi"] }

[dependencies.glfw-sys-passthrough]
optional = true
version = "4"


[dependencies.image]
optional = true
version = "^0.24.1"

[dependencies.log]
optional = true
version = "0.4"

[dependencies.ash]
optional = true
version = "0.37.2"

[dev-dependencies]
log = "0.4"

[features]
all = ["image", "vulkan", "log", "wayland"]
default = ["glfw-sys-passthrough"]
vulkan = ["ash"]
wayland = ["glfw-sys-passthrough/wayland"]
